kubernetes-manifests/flaskr-review-local.deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flaskr

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskr-review-deployment
  namespace: flaskr
  labels:
    app: flaskr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskr
  template:
    metadata:
      labels:
        app: flaskr
    spec:
      containers:
        - name: flaskr
          image: flaskr:latest
          imagePullPolicy: Never
          ports:
          - containerPort: 8080
          volumeMounts:
            - mountPath: /home/app/db
              name: db
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: db-pv-claim

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: flaskr
  name: flaskr-review-load-balancer
  namespace: flaskr
spec:
  selector:
    app: flaskr
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 8080
  type: LoadBalancer
