kubernetes-manifests/flaskr-production-gcp.deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flaskr-production

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskr-production-deployment
  namespace: flaskr-production
  labels:
    app: flaskr-production-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskr-production-app
  template:
    metadata:
      labels:
        app: flaskr-production-app
    spec:
      securityContext:
        fsGroup: 1024
      containers:
        - name: flaskr-production
          image: ${IMAGE_NAME}
          ports:
          - containerPort: 8080
          volumeMounts:
            - mountPath: /home/app/db
              name: db
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: flaskr-production-persistent-volume-claim

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: flaskr-production-app
  name: flaskr-production-load-balancer
  namespace: flaskr-production
spec:
  selector:
    app: flaskr-production-app
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 8080
  type: LoadBalancer

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: flaskr-production-app
  name: flaskr-production-virtual-host
  namespace: flaskr-production
spec:
  rules:
  - host: ${APPS_DOMAIN}
    http:
      paths:
      - backend:
          serviceName: flaskr-production-load-balancer
          servicePort: 9090
